--- a/equipo.html
+++ b/equipo.html
@@ -130,7 +130,7 @@
                   Antes de rodar, el equipo pasó meses investigando el hábitat
                   de los grandes felinos y planificando cada toma en detalle.
                 </p>
-                <img src="./jungla.webp" class="img-fluid" alt="">
+                <img src="./jungla.webp" class="img-fluid" alt="" />
               </div>
             </div>
             <div class="col-md-6 mb-4">
@@ -140,7 +140,7 @@
                   El equipo pasó largas jornadas en climas extremos capturando
                   imágenes en su entorno natural.
                 </p>
-                <img src="./img/equipo/himalaya.jpg" class="img-fluid" alt="">
+                <img src="./img/equipo/himalaya.jpg" class="img-fluid" alt="" />
               </div>
             </div>
             <div class="col-md mb-4 text-center">
@@ -150,7 +150,7 @@
                   En esta etapa, se editaron más de 200 horas de metraje para
                   crear una narrativa visual impresionante.
                 </p>
-                <img src="./img/equipo/edicion.jpg" class="img-fluid" alt="">
+                <img src="./img/equipo/edicion.jpg" class="img-fluid" alt="" />
               </div>
             </div>
           </div>
@@ -288,6 +288,7 @@
         </div>
       </div>
     </section>
+
     <section>
       <div class="container text-center mt-3">
         <div class="row">
@@ -296,26 +297,64 @@
           </div>
           <div class="col-sm-12 col-md-12 mb-5">
             <p class="fs-5">
-              Nuestro equipo de producción ha logrado grandes hitos en la creación del documental sobre grandes felinos, desde una exhaustiva investigación que nos permitió acceder a hábitats de difícil alcance y trabajar con expertos, hasta la captura de imágenes impresionantes en condiciones extremas. A través de una cinematografía de alto nivel y una colaboración internacional, hemos logrado sensibilizar al público sobre la urgente necesidad de conservar estas especies, mostrando tanto los desafíos como las soluciones globales. El impacto del documental ha sido significativo, recibiendo elogios por su enfoque educativo y visualmente impactante, reflejando el esfuerzo y la pasión de todo el equipo.</p>
+              Nuestro equipo de producción ha logrado grandes hitos en la
+              creación del documental sobre grandes felinos, desde una
+              exhaustiva investigación que nos permitió acceder a hábitats de
+              difícil alcance y trabajar con expertos, hasta la captura de
+              imágenes impresionantes en condiciones extremas. A través de una
+              cinematografía de alto nivel y una colaboración internacional,
+              hemos logrado sensibilizar al público sobre la urgente necesidad
+              de conservar estas especies, mostrando tanto los desafíos como las
+              soluciones globales. El impacto del documental ha sido
+              significativo, recibiendo elogios por su enfoque educativo y
+              visualmente impactante, reflejando el esfuerzo y la pasión de todo
+              el equipo.
+            </p>
           </div>
           <div class="col-md-6 pb-5">
-            <img src="./img/equipo/trofeo.jfif" class="img-fluid" alt="">
+            <div class="d-flex justify-content-center align-items-center">
+              <img
+                src="./img/equipo/trofeo.jfif"
+                class=""
+                height="350"
+                alt="Trofeo"
+                style="max-width: 100%; object-fit: cover"
+              />
+            </div>
           </div>
           <div class="col-md-6">
-            <img src="./img/equipo/produccion.avif" class="img-fluid" alt="">
+            <div class="justify-content-center align-items-center">
+              <img
+                src="./img/equipo/produccion.avif"
+                class=""
+                height="350"
+                alt="Producción"
+                style="max-width: 100%; object-fit: cover"
+              />
+            </div>
           </div>
         </div>
       </div>
     </section>
+
     <section>
       <div class="container text-center pt-5 pb-5">
         <div class="row">
           <div class="col-md-12">
             <h2>Documental de otros Grandes Felinos</h2>
           </div>
-          <!-- Hacer el video responsive -->
-          <div class="col-md-12">
-            <iframe width="900" height="515" src="https://www.youtube.com/embed/f1emA6Qv5vQ?si=sPoos_BvOQ5rwT4_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+          <div class="col-md-12 ratio ratio-16x9">
+            <iframe
+              width="900"
+              height="515"
+              src="https://www.youtube.com/embed/f1emA6Qv5vQ?si=sPoos_BvOQ5rwT4_"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
           </div>
         </div>
       </div>
@@ -348,7 +387,7 @@
               </li>
               <li>
                 <a
-                  href="./conservacion.html"
+                  href="./leopardoNieves.html"
                   class="text-white text-decoration-none"
                   >Leopardo de las Nieves</a
                 >
